2006-12-21  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Makefile.am): Move modifications of
	AUTOMAKE_OPTIONS, AM_CPPFLAGS and settings of gettextsrcdir,
	gettextsrc_DATA, pkgdatadir to ../gettext-tools/gnulib-lib/Makefile.am.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp (func_usage, func_version): New functions.
	(dllexports): New variable.
	Parse command-line options.
	(func_emit_source_h): Emit DLL_VARIABLE marks if the class is to be
	exported.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* modules/moo (Makefile.am): Declare MOOPPFLAGS.
	* modules/moo-tests (Makefile.am): Pass the MOOPPFLAGS to every moopp
	invocation.
	* modules/ostream (Makefile.am): Likewise.
	* modules/fd-ostream (Makefile.am): Likewise.
	* modules/file-ostream (Makefile.am): Likewise.
	* modules/html-ostream (Makefile.am): Likewise.
	* modules/iconv-ostream (Makefile.am): Likewise.
	* modules/memory-ostream (Makefile.am): Likewise.
	* modules/term-ostream (Makefile.am): Likewise.
	* modules/styled-ostream (Makefile.am): Likewise.
	* modules/html-styled-ostream (Makefile.am): Likewise.
	* modules/term-styled-ostream (Makefile.am): Likewise.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* lib/diffseq.h (diag, compareseq): Use the EQUAL macro.

2006-12-19  Bruno Haible  <bruno@clisp.org>

	* m4/libxml.m4 (gl_LIBXML): Check for arpa/nameser.h and resolv.h
	with some prerequisite headers. Needed for AIX 4.3.2.

2006-12-19  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c (term_ostream_create): Add color information
	about xterm if the platform lacks it.

2006-12-19  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c: Include terminfo.h instead of termcap.h.
	* modules/term-ostream (Depends-on): Add terminfo-h, remove termcap-h.

2006-12-19  Bruno Haible  <bruno@clisp.org>

	* lib/terminfo.h: New file.
	* modules/terminfo-h: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2006-12-19  Bruno Haible  <bruno@clisp.org>
