@@ -1,3 +1,8 @@
+2006-12-23  Bruno Haible  <bruno@clisp.org>
+
+	* lib/term-ostream.oo.c (term_ostream_create): Fix up the
+	no_color_video value for cygwin.
+
 2006-12-21  Bruno Haible  <bruno@clisp.org>
 
 	* modules/gettext-tools-misc (Makefile.am): Move modifications of
